--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,8 @@ spring.data.mongodb.host=localhost
 server.port=8000
 spring.application.name=Connecto
 server.context-path=/connecto
+
+spring.application.version=/v1
+employee-api.path=/employee
+thread-api.path=/thread
+comment-api.path=/comment
