Added all the initial api calls and services along with repositories

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,7 @@ server.port=8000
 spring.application.name=Connecto
 server.context-path=/connecto
 
-spring.application.version=/v1
+application.version=/v1
 employee-api.path=/employee
 thread-api.path=/thread
 comment-api.path=/comment
