--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,14 +2,14 @@
 spring.data.mongodb.authentication-database=admin
 spring.data.mongodb.username=root
 spring.data.mongodb.password=root
-spring.data.mongodb.database=user_db
+spring.data.mongodb.database=connecto
 spring.data.mongodb.port=27017
 spring.data.mongodb.host=localhost
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # App config
-server.port=8000
-spring.application.name=Connecto
-server.context-path=/connecto
+server.contextPath=/connecto
+server.port=8080
 
 application.version=/v1
 employee-api.path=/employee
