--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,8 @@
 #Local MongoDB config
 spring.data.mongodb.authentication-database=admin
-spring.data.mongodb.username=root
-spring.data.mongodb.password=root
 spring.data.mongodb.database=connecto
 spring.data.mongodb.port=27017
 spring.data.mongodb.host=localhost
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# App config
-server.contextPath=/connecto
-server.port=8080
-
-application.version=/v1
-employee-api.path=/employee
-thread-api.path=/thread
-comment-api.path=/comment
+server.servlet.context-path=/connecto
+server.port=8088
