--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,8 @@ spring.data.mongodb.host=localhost
 
 server.servlet.context-path=/connecto
 server.port=8088
+
+spring.mail.host=smtp-host
+spring.mail.username=username
+spring.mail.password=password
+spring.mail.from=email-address
